--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   kong:
     image: kong:3.5
@@ -21,21 +19,26 @@ services:
 
   keycloak:
     image: quay.io/keycloak/keycloak:22.0
+    command: start-dev
     environment:
-      KC_DB: postgres
-      KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
-      KC_DB_USERNAME: keycloak
-      KC_DB_PASSWORD: ${KEYCLOAK_DB_PASSWORD}
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD}
-      KC_PROXY: edge
-      KC_HOSTNAME_STRICT: "false"
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=admin
+      - KC_DB=postgres
+      - KC_DB_URL=jdbc:postgresql://postgres:5432/keycloak
+      - KC_DB_USERNAME=keycloak
+      - KC_DB_PASSWORD=keycloak
+      - KC_HOSTNAME=localhost
     ports:
       - "8080:8080"
     depends_on:
       - postgres
     networks:
       - dive25-net
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health/ready"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   api:
     build:
@@ -65,7 +68,7 @@ services:
       - NEXT_PUBLIC_API_URL=http://api:3000
       - NEXT_PUBLIC_KEYCLOAK_URL=http://keycloak:8080
     ports:
-      - "80:3000"
+      - "3001:3000"
     depends_on:
       - api
     networks:
@@ -102,11 +105,11 @@ services:
       - dive25-net
 
   postgres:
-    image: postgres:13
+    image: postgres:15
     environment:
-      POSTGRES_DB: keycloak
-      POSTGRES_USER: keycloak
-      POSTGRES_PASSWORD: ${KEYCLOAK_DB_PASSWORD}
+      - POSTGRES_DB=keycloak
+      - POSTGRES_USER=keycloak
+      - POSTGRES_PASSWORD=keycloak
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
