all containers loading, config mapping

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Database Credentials
-MONGO_ROOT_USER=admin
-MONGO_ROOT_PASSWORD=
+MONGO_INITDB_ROOT_USERNAME=your_mongo_root_user
+MONGO_INITDB_ROOT_PASSWORD=your_mongo_root_password
 
 # Keycloak Configuration
 KEYCLOAK_ADMIN=admin
