--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,6 @@
 # Database Credentials
-MONGO_ROOT_USER=admin
-MONGO_ROOT_PASSWORD=
+MONGO_INITDB_ROOT_USERNAME=
+MONGO_INITDB_ROOT_PASSWORD= 
 
 # Keycloak Configuration
 KEYCLOAK_ADMIN=admin
@@ -24,4 +24,4 @@ NEXT_PUBLIC_API_URL=http://api:3000
 NEXT_PUBLIC_KEYCLOAK_URL=http://keycloak:8080
 
 # Monitoring
-GRAFANA_ADMIN_PASSWORD= 
+GRAFANA_ADMIN_PASSWORD=
