--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   kong:
     image: kong:3.5
+    user: root
     environment:
       KONG_DATABASE: "off"
       KONG_PROXY_ACCESS_LOG: /dev/stdout
@@ -9,11 +10,12 @@ services:
       KONG_ADMIN_ERROR_LOG: /dev/stderr
       KONG_ADMIN_LISTEN: 0.0.0.0:8001
       KONG_DECLARATIVE_CONFIG: /usr/local/kong/declarative/kong.yml
+      KONG_LOG_LEVEL: debug
     ports:
       - "8000:8000"
       - "8443:8443"
     volumes:
-      - ./kong:/usr/local/kong/declarative
+      - ./config/kong/declarative:/usr/local/kong/declarative:ro
     networks:
       - dive25-net
 
