--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "node src/index.js",
         "dev": "nodemon src/index.js",
-        "test": "jest"
+        "test": "jest",
+        "generate-types": "openapi-typescript openapi.yml -o src/types/api.d.ts"
     },
     "dependencies": {
         "express": "^4.18.2",
@@ -14,10 +15,34 @@
         "keycloak-connect": "^22.0.0",
         "redis": "^4.6.0",
         "cors": "^2.8.5",
-        "dotenv": "^16.0.3"
+        "dotenv": "^16.0.3",
+        "@fastify/swagger": "^8.14.0",
+        "@fastify/swagger-ui": "^2.1.0",
+        "express-openapi-validator": "^5.1.2",
+        "swagger-ui-express": "^5.0.0",
+        "yaml": "^2.3.4",
+        "glob": "^10.3.10",
+        "lru-cache": "^10.1.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.22",
-        "jest": "^29.5.0"
+        "jest": "^29.5.0",
+        "openapi-typescript": "^6.7.4",
+        "@types/express": "^4.17.21",
+        "@types/swagger-ui-express": "^4.1.6",
+        "typescript": "^5.3.3"
+    },
+    "overrides": {
+        "glob": "^10.3.10",
+        "inflight": "^2.0.0",
+        "lodash.get": "^4.4.2"
+    },
+    "resolutions": {
+        "glob": "^10.3.10",
+        "inflight": "^2.0.0",
+        "lodash.get": "^4.4.2"
+    },
+    "engines": {
+        "node": ">=18.0.0"
     }
 }
