made custom ldap exporter service, legacy repos no longer supported, generic keycloak configs, all containers spin up

--- a/.env
+++ b/.env
@@ -25,3 +25,7 @@ NEXT_PUBLIC_KEYCLOAK_URL=http://keycloak:8080
 
 # Monitoring
 GRAFANA_ADMIN_PASSWORD= 
+
+LDAP_ADMIN_PASSWORD=your_secure_admin_password
+LDAP_CONFIG_PASSWORD=your_secure_config_password
+LDAP_READONLY_PASSWORD=your_secure_readonly_password
