--- a/.env.production
+++ b/.env.production
@@ -31,3 +31,7 @@ KONG_API_KEY=your-secure-kong-key
 
 # Grafana admin password
 GRAFANA_ADMIN_PASSWORD=your_grafana_admin_password
+
+LDAP_ADMIN_PASSWORD=your_secure_admin_password
+LDAP_CONFIG_PASSWORD=your_secure_config_password
+LDAP_READONLY_PASSWORD=your_secure_readonly_password
