--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -27,3 +27,17 @@ scrape_configs:
   - job_name: 'frontend'
     static_configs:
       - targets: ['frontend:3000']
+
+  - job_name: 'openldap'
+    static_configs:
+      - targets: ['ldap-exporter:9330']
+    metrics_path: '/metrics'
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: instance
+        replacement: 'openldap'
+
+  - job_name: 'ldap-metrics'
+    static_configs:
+      - targets: ['ldap-exporter:9330']
+    metrics_path: '/metrics'
