more keycloak configs

--- a/.env.template
+++ b/.env.template
@@ -29,3 +29,6 @@ GRAFANA_ADMIN_PASSWORD=
 LDAP_ADMIN_PASSWORD=your_secure_admin_password
 LDAP_CONFIG_PASSWORD=your_secure_config_password
 LDAP_READONLY_PASSWORD=your_secure_readonly_password
+
+POSTGRES_PASSWORD=your_secure_postgres_password
+KEYCLOAK_DB_PASSWORD=your_secure_keycloak_password
