--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,25 +1,31 @@
 {
-    "name": "dive25-frontend",
-    "version": "1.0.0",
-    "description": "DIVE25 Frontend Application",
+    "name": "frontend",
+    "version": "0.1.0",
+    "private": true,
     "scripts": {
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "test": "jest"
+        "lint": "next lint"
     },
     "dependencies": {
-        "next": "^13.5.0",
+        "@swc/helpers": "^0.5.0",
+        "next": "14.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "axios": "^1.3.0",
-        "keycloak-js": "^22.0.0"
+        "keycloak-js": "^23.0.3",
+        "axios": "^1.6.7",
+        "@types/axios": "^0.14.0",
+        "swr": "^2.2.4",
+        "@tanstack/react-query": "^5.20.1"
     },
     "devDependencies": {
+        "@types/node": "^20.0.0",
         "@types/react": "^18.2.0",
-        "@types/node": "^18.0.0",
+        "@types/react-dom": "^18.2.0",
         "typescript": "^5.0.0",
-        "jest": "^29.5.0",
-        "@types/react-dom": "^18.2.0"
+        "autoprefixer": "^10.4.17",
+        "postcss": "^8.4.35",
+        "tailwindcss": "^3.4.1"
     }
 }
