--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
 # Database Credentials
-MONGO_INITDB_ROOT_USERNAME=dRWEcZQsr91qZbXPipjYfny6
-MONGO_INITDB_ROOT_PASSWORD=WWuF5QU4I1GYEaBtc3kv4H64
+MONGO_INITDB_ROOT_USERNAME=your_mongo_root_user
+MONGO_INITDB_ROOT_PASSWORD=your_mongo_root_password
 
 # Keycloak Configuration
 KEYCLOAK_ADMIN=admin
-KEYCLOAK_ADMIN_PASSWORD=d3r3SB3FXfF8OFWTjO2CBqOt
-KEYCLOAK_DB_PASSWORD=4ftDBhCSUgCJwsAL63wEJyVG
-KEYCLOAK_CLIENT_SECRET=o3k2wJuuiBloQN7OIKu6RclG
+KEYCLOAK_ADMIN_PASSWORD=
+KEYCLOAK_DB_PASSWORD=
+KEYCLOAK_CLIENT_SECRET=
 
 # Security
-JWT_SECRET=zzBKZ4slidLWtqLCRG1UrGrh
-API_KEY=z0MjpJRcxb4AhGhaj84OPPXG
+JWT_SECRET=
+API_KEY=
 
 # API Configuration
 NODE_ENV=production
@@ -24,9 +24,11 @@ NEXT_PUBLIC_API_URL=http://api:3000
 NEXT_PUBLIC_KEYCLOAK_URL=http://keycloak:8080
 
 # Monitoring
-GRAFANA_ADMIN_PASSWORD=8GGC2xMy8w670Bc4TOO6Mo4d
+GRAFANA_ADMIN_PASSWORD= 
 
-LDAP_ADMIN_PASSWORD=xFX0RkPJyNmFSZZXE0tR2DXF
+LDAP_ADMIN_PASSWORD=your_secure_admin_password
 LDAP_CONFIG_PASSWORD=your_secure_config_password
-LDAP_READONLY_PASSWORD=YVM1UsH1Asn8NNSs7EWklqDn
-POSTGRES_PASSWORD=FVEfWPpBV3fKWSHGVzRH0lxS
+LDAP_READONLY_PASSWORD=your_secure_readonly_password
+
+POSTGRES_PASSWORD=your_secure_postgres_password
+KEYCLOAK_DB_PASSWORD=your_secure_keycloak_password
