--- a/.env
+++ b/.env
@@ -1,34 +1,27 @@
 # Database Credentials
-MONGO_INITDB_ROOT_USERNAME=your_mongo_root_user
-MONGO_INITDB_ROOT_PASSWORD=your_mongo_root_password
-
+MONGO_INITDB_ROOT_USERNAME=m5hR19nAIFuL6mPRJvlISGdn
+MONGO_INITDB_ROOT_PASSWORD=m5hR19nAIFuL6mPRJvlISGdn
 # Keycloak Configuration
-KEYCLOAK_ADMIN=admin
-KEYCLOAK_ADMIN_PASSWORD=
-KEYCLOAK_DB_PASSWORD=
-KEYCLOAK_CLIENT_SECRET=
-
+KEYCLOAK_ADMIN=m5hR19nAIFuL6mPRJvlISGdn
+KEYCLOAK_ADMIN_PASSWORD=m5hR19nAIFuL6mPRJvlISGdn
+KEYCLOAK_DB_PASSWORD=m5hR19nAIFuL6mPRJvlISGdn
+KEYCLOAK_CLIENT_SECRET=m5hR19nAIFuL6mPRJvlISGdn
 # Security
-JWT_SECRET=
-API_KEY=
-
+JWT_SECRET=m5hR19nAIFuL6mPRJvlISGdn
+API_KEY=m5hR19nAIFuL6mPRJvlISGdn
 # API Configuration
-NODE_ENV=production
-MONGODB_URI=mongodb://mongodb:27017/dive25
-REDIS_HOST=redis
-OPA_URL=http://opa:8181
-KEYCLOAK_URL=http://keycloak:8080
-
+NODE_ENV=m5hR19nAIFuL6mPRJvlISGdn
+MONGODB_URI=m5hR19nAIFuL6mPRJvlISGdn
+REDIS_HOST=m5hR19nAIFuL6mPRJvlISGdn
+OPA_URL=m5hR19nAIFuL6mPRJvlISGdn
+KEYCLOAK_URL=m5hR19nAIFuL6mPRJvlISGdn
 # Frontend Configuration
-NEXT_PUBLIC_API_URL=http://api:3000
-NEXT_PUBLIC_KEYCLOAK_URL=http://keycloak:8080
-
+NEXT_PUBLIC_API_URL=m5hR19nAIFuL6mPRJvlISGdn
+NEXT_PUBLIC_KEYCLOAK_URL=m5hR19nAIFuL6mPRJvlISGdn
 # Monitoring
-GRAFANA_ADMIN_PASSWORD= 
-
-LDAP_ADMIN_PASSWORD=your_secure_admin_password
-LDAP_CONFIG_PASSWORD=your_secure_config_password
-LDAP_READONLY_PASSWORD=your_secure_readonly_password
-
-POSTGRES_PASSWORD=your_secure_postgres_password
-KEYCLOAK_DB_PASSWORD=your_secure_keycloak_password
+GRAFANA_ADMIN_PASSWORD=m5hR19nAIFuL6mPRJvlISGdn
+# LDAP Configuration
+LDAP_ADMIN_PASSWORD=m5hR19nAIFuL6mPRJvlISGdn
+LDAP_CONFIG_PASSWORD=m5hR19nAIFuL6mPRJvlISGdn
+LDAP_READONLY_PASSWORD=m5hR19nAIFuL6mPRJvlISGdn
+# PostgreSQL
