--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Database Credentials
-MONGO_INITDB_ROOT_USERNAME=your_mongo_root_user
-MONGO_INITDB_ROOT_PASSWORD=your_mongo_root_password
+MONGO_INITDB_ROOT_USERNAME=
+MONGO_INITDB_ROOT_PASSWORD=
 
 # Keycloak Configuration
 KEYCLOAK_ADMIN=admin
@@ -24,11 +24,12 @@ NEXT_PUBLIC_API_URL=http://api:3000
 NEXT_PUBLIC_KEYCLOAK_URL=http://keycloak:8080
 
 # Monitoring
-GRAFANA_ADMIN_PASSWORD= 
+GRAFANA_ADMIN_PASSWORD=
 
-LDAP_ADMIN_PASSWORD=your_secure_admin_password
-LDAP_CONFIG_PASSWORD=your_secure_config_password
-LDAP_READONLY_PASSWORD=your_secure_readonly_password
+# LDAP Configuration
+LDAP_ADMIN_PASSWORD=
+LDAP_CONFIG_PASSWORD=
+LDAP_READONLY_PASSWORD=
 
-POSTGRES_PASSWORD=your_secure_postgres_password
-KEYCLOAK_DB_PASSWORD=your_secure_keycloak_password
+# PostgreSQL
+POSTGRES_PASSWORD= 
