--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,108 @@
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
+desktop.ini
+
+# Linux
+*~
+
+# IDEs
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Node.js
+node_modules/
+.env
+dist/
+build/
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+env/
+venv/
+.Python
+
+# Java
+*.class
+*.jar
+*.war
+*.ear
+*.iml
+target/
+
+# C/C++
+*.o
+*.out
+*.obj
+*.exe
+*.so
+*.dll
+
+# Go
+bin/
+*.exe
+*.test
+*.out
+
+# PHP
+/vendor/
+.env
+
+# Ruby
+*.gem
+*.rbc
+.bundle/
+vendor/bundle/
+log/
+tmp/
+
+# Docker
+*.pid
+*.seed
+*.pid.lock
+docker-compose.override.yml
+
+# Git
+.git/
+*.orig
+
+# Archives & Binaries
+*.zip
+*.tar.gz
+*.rar
+*.7z
+*.bak
+*.tmp
+*.swp
+*.swo
+
+# Temporary Files
+*.tmp
+*.bak
+*.swp
+*.swo
+
+# Environment
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.bak
+backups/.env.backup.20250221_171835
+backups/.env.backup.20250221_172555
 llm_text_transcripts/merged-repo-2025-02-21T14-04-40.783Z.txt
 merge-repo.js
+.env
