--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,9 @@
         "react-dom": "^18.2.0",
         "keycloak-js": "^23.0.3",
         "axios": "^1.6.7",
-        "@types/axios": "^0.14.0",
-        "swr": "^2.2.4",
-        "@tanstack/react-query": "^5.20.1"
+        "next-swagger-doc": "^0.4.0",
+        "swagger-ui-react": "^5.11.2",
+        "@types/swagger-ui-react": "^4.18.3"
     },
     "devDependencies": {
         "@types/node": "^20.0.0",
