load in certs, frontend fixes, stregthen deployment checks

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,4 @@ backups/.env.backup.20250221_172555
 llm_text_transcripts/merged-repo-2025-02-21T14-04-40.783Z.txt
 merge-repo.js
 .env
+llm_text_transcripts/merged-repo-2025-02-22T05-27-27.468Z.txt
