--- a/config/kong/declarative/kong.yml
+++ b/config/kong/declarative/kong.yml
@@ -3,7 +3,7 @@ _format_version: "3.0"
 
 services:
   - name: frontend
-    url: http://frontend:3000
+    url: http://frontend:80
     routes:
       - name: frontend-route
         paths:
@@ -30,6 +30,9 @@ services:
           key_claim_name: kid
           claims_to_verify:
             - exp
+    connect_timeout: 5000
+    write_timeout: 60000
+    read_timeout: 60000
 
   - name: keycloak
     url: http://keycloak:8080
@@ -41,6 +44,9 @@ services:
         protocols:
           - http
           - https
+    connect_timeout: 5000
+    write_timeout: 60000
+    read_timeout: 60000
 
   - name: grafana
     url: http://grafana:3000
@@ -52,3 +58,6 @@ services:
         protocols:
           - http
           - https
+    connect_timeout: 5000
+    write_timeout: 60000
+    read_timeout: 60000
