--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,19 +30,15 @@ services:
       - --db-password=${KEYCLOAK_DB_PASSWORD}
       - --http-enabled=true
       - --http-port=8080
-      - --proxy=edge
+      - --http-relative-path=/auth
+      - --proxy-headers=forwarded
       - --hostname-strict=false
-      - --hostname-strict-https=false
-      - --spi-x509cert-lookup-provider=nginx
+      - --health-enabled=true
+      - --metrics-enabled=true
     environment:
       - KEYCLOAK_ADMIN=admin
       - KEYCLOAK_ADMIN_PASSWORD=${KEYCLOAK_ADMIN_PASSWORD}
       - KEYCLOAK_CLIENT_SECRET=${KEYCLOAK_CLIENT_SECRET}
-      - KC_PROXY_ADDRESS_FORWARDING=true
-      - KC_HTTP_RELATIVE_PATH=/auth
-      - KC_HEALTH_ENABLED=true
-      - KC_HTTP_CONNECTION_TIMEOUT=5000
-      - KC_HTTP_READ_TIMEOUT=60000
     volumes:
       - ./config/keycloak/dive25-realm.json:/opt/keycloak/data/import/dive25-realm.json:ro
     ports:
@@ -53,11 +49,11 @@ services:
     networks:
       - dive25-net
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/health/ready"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/auth/health/ready || curl -f http://localhost:8080/health/ready"]
       interval: 30s
       timeout: 10s
-      retries: 3
-      start_period: 30s
+      retries: 5
+      start_period: 60s
     deploy:
       resources:
         limits:
