--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,4 @@ llm_text_transcripts/merged-repo-2025-02-21T14-04-40.783Z.txt
 merge-repo.js
 .env
 llm_text_transcripts/merged-repo-2025-02-22T05-27-27.468Z.txt
+certificates/prod/config/archive/dive25.com/privkey1.pem
